# stock

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
crates/ast/: Cargo.toml
crates/ast/src/: arena.rs  ast.rs  expression.rs  lib.rs  operators.rs  statement.rs
crates/hir/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: error.rs  intern.rs  keywords.rs  lexer.rs  lib.rs  span.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  parser.rs
crates/source/: Cargo.toml
crates/source/src/: interner.rs  lib.rs  source.rs  sourcemap.rs  span.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs  sourcemap.rs  span.rs  symbol.rs
crates/syntax/: Cargo.toml
crates/syntax/src/ast/: arena.rs  id.rs  mod.rs  nodes.rs
crates/syntax/src/lexer/: mod.rs  token.rs
docs/: grammar.md  syntax.md
spec/: datatypes.md  grammar.md  pointer_safety.md  syntax.md
