[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratplier/stock"

[workspace.dependencies]
stock_lexer = { path = "crates/lexer" }
stock_source = { path = "crates/source" }
stock_ast = { path = "crates/ast" }
stock_parser = { path = "crates/parser" }
